# computerVisionRevMza

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  STRUCTURE.md  pyproject.toml
.dvc/: config
context/: planeacion_proyecto.md  resume_proyecto.md
data/labeled/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/test/: .gitignore  sample_blocks.csv.dvc
docker/: Dockerfile  docker-compose.yml
docs/referencia/: analisis_viabilidad_plan_v3.md  prompt_inicial.md
docs/us-planning/: us-001.md  us-002.md
docs/us-resolved/: us-002.md  us.001.md
models/: .gitkeep
notebooks/experimental/: .gitkeep
scripts/: test_imports.py  verify_cuda.py  verify_dvc.py
src/: __init__.py
src/acquisition/: __init__.py  google_maps_client.py  tile_stitcher.py  vector_rasterizer.py
src/alignment/: __init__.py  cascade.py  ecc_aligner.py  loftr_aligner.py  sam_validator.py
src/api/: __init__.py
src/classification/: __init__.py  dino_extractor.py  ensemble.py  feature_builder.py  metrics.py
src/pipelines/: __init__.py
src/utils/: __init__.py  config.py  geo.py  logging.py
tests/: __init__.py
tests/integration/: test_dvc_integration.py
tests/unit/: test_config.py  test_ecc_aligner.py  test_geo.py  test_metrics.py
